# fastauth

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  publish.yml
docs/: index.md  installation.md  quickstart.md
docs/concepts/: adapters.md  config.md  csrf.md  events.md  hooks.md  plugins.md  rate-limit.md  sessions.md
docs/guides/: bearer-auth.md  deploying.md  email-verification.md  kms-signing.md  password-reset.md  user-management.md
docs/plugins/: api-key.md  audit-logs.md  email-otp.md  jwt.md  openapi.md  test-utils.md
docs/reference/: index.md
docs/superpowers/plans/: 2026-06-23-authkit-v1.md  2026-06-26-fastauth-rebrand.md
examples/quickstart/: app.py  pyproject.toml  settings.py
examples/quickstart/tests/: conftest.py  test_end_to_end.py
src/authkit/: __init__.py  config.py  exceptions.py
src/authkit/cli/: __init__.py  main.py
src/authkit/domain/: enums.py  events.py  models.py
src/authkit/flows/: __init__.py  change_email.py  change_password.py  credentials.py  email_otp.py  password_reset.py  refresh.py  sessions.py  user_management.py  verification.py
src/authkit/messaging/: email.py
src/authkit/plugins/: __init__.py  api_key.py  audit_logs.py  base.py  email_otp.py  jwt.py  openapi.py  (+1 more)
src/fastauth/: __init__.py  config.py  database.py  exceptions.py  options.py  providers.py
tests/: conftest.py
tests/adapters/: adapter_contract.py  conftest.py  test_beanie_adapter.py  test_memory_adapter.py  test_postgres_adapter.py
tests/cli/: test_cli.py
tests/integration/: conftest.py  test_api_keys_plugin.py  test_audit_logs_plugin.py  test_bearer_transport.py  test_change_email.py  test_change_password.py  test_csrf_origin.py  test_current_user_dependency.py  test_email_otp_plugin.py  test_email_verification.py  test_health.py  test_jwt_plugin.py  test_jwt_session_strategy.py  test_lockout.py  test_openapi_plugin.py  test_password_reset.py  test_rate_limit_endpoints.py  test_refresh_tokens.py  test_security_headers.py  test_sessions_management.py  test_signup_signin.py  test_test_utils_plugin.py  test_user_management.py  test_wire_format.py
tests/unit/: test_adapter_capabilities.py  test_authkit_defaults.py  test_beanie_collection_names.py  test_beanie_document_mapping.py  test_beanie_lifespan.py  test_beanie_update_paths.py  test_config.py  test_csrf.py  test_docs_contract.py  test_email.py  test_enums.py  test_events.py  test_exceptions.py  test_fastauth_defaults.py  test_final_pydantic_native_api.py  test_hooks.py  test_models.py  test_no_private_names.py  test_options.py  test_passwords.py  test_plugin_options.py  test_plugin_registry.py  test_postgres_adapter.py  test_postgres_schema.py  test_public_api_redesign.py  test_pydantic_native_refactor.py  test_rate_limit.py  test_refresh_token_service.py  test_router_plugin_boundaries.py  test_sessions_database.py  test_sessions_jwt.py  test_tokens.py  test_wire_serialization.py
(+95 files in other folders)
