[project]
name = "fastauth-py"
version = "0.3.3"
description = "A modular, Pydantic-native, async-only authentication library for FastAPI."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Bhargav Andhe", email = "bhargavandhe2310@gmail.com" }]
keywords = [
  "fastapi",
  "authentication",
  "auth",
  "pydantic",
  "jwt",
  "security",
  "beanie",
  "mongodb",
  "postgres",
  "sqlalchemy",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: FastAPI",
  "Framework :: Pydantic :: 2",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = [
  "fastapi>=0.115",
  "pydantic[email]>=2.8",
  "starlette>=0.40",
  "typing-extensions>=4.12",
  "jinja2>=3.1",
  "argon2-cffi>=23.1",
  "itsdangerous>=2.2",
]

[project.urls]
Homepage = "https://github.com/bhargavandhe/fastauth"
Documentation = "https://github.com/bhargavandhe/fastauth#readme"
Repository = "https://github.com/bhargavandhe/fastauth"
Issues = "https://github.com/bhargavandhe/fastauth/issues"

[project.optional-dependencies]
beanie = ["beanie>=2,<3"]
postgres = ["sqlalchemy[asyncio]>=2.0,<3", "asyncpg>=0.29"]
jwt = ["joserfc>=1.0", "cryptography>=43.0"]
cli = ["typer>=0.12", "rich>=13.7"]
dev = [
  "ruff>=0.6",
  "pyright>=1.1.380",
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5.0",
  "httpx>=0.27",
  "testcontainers[mongodb,postgres]>=4.8",
  "pre-commit>=3.8",
  "uvicorn[standard]>=0.30",
]
docs = ["mkdocs-material>=9.5", "mkdocstrings[python]>=0.26"]

[project.scripts]
fastauth = "fastauth.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fastauth"]

[tool.hatch.build.targets.sdist]
include = ["src/fastauth", "README.md", "LICENSE"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "S", "ANN", "RUF"]
ignore = ["S101"]  # allow assert in tests

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "ANN"]
"examples/**/tests/**" = ["S", "ANN"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "strict"
reportMissingTypeStubs = "warning"
reportUnknownMemberType = "warning"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers --cov=fastauth --cov-report=term-missing"

[tool.coverage.run]
branch = true
source = ["src/fastauth"]
