[project]
name = "authkit-quickstart"
version = "0.0.0"
description = "Example FastAPI app exercising every authkit v1 feature."
requires-python = ">=3.11"
dependencies = [
  "authkit-fastapi[beanie,jwt,cli] @ file://../../",
  "fastapi",
  "uvicorn",
]

[tool.uv.sources]
authkit-fastapi = { path = "../.." }
